Added team drop down and combined it with position drop down and games show/hide toggle

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,12 @@
 	padding-bottom: 25px;
 }
 
+.options-drop-down
+{
+	display: inline-block;
+	margin-right: 20px;
+}
+
 /* matchups table for pop-up */
 
 .inside_box table
